// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.v2.controller GET /harvests error cases returns a 400 for invalide chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v2.controller GET /harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Array [],
}
`;

exports[`vaults.v2.controller GET /harvests/:vault error cases returns a 400 for invalide chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v2.controller GET /harvests/:vault success cases Return extended harvests for chain vault by addr 1`] = `Array []`;

exports[`vaults.v2.controller GET /vaults with a specified chain returns the vaults for bsc 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 8.26,
    "maxApy": 12.39,
    "minApr": 8.26,
    "minApy": 12.39,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 1116121.18,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 121.30081247605314,
      "harvestPeriodApr": 149.1773902343396,
      "harvestPeriodApy": 149.1773902343396,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 40.57150731349046,
          "balance": 15.224057662985818,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 246.3352209734823,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 80.72930516256265,
          "balance": 145.75136941976888,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 490.1585507433956,
        },
      ],
      "harvestValue": 736.493771716878,
      "nonHarvestApr": 4.813626147728255,
      "nonHarvestApy": 11.851231366577842,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 7.037605218849587,
          "boostable": false,
          "maxApr": 7.037605218849587,
          "minApr": 7.037605218849587,
          "name": "Vault Flywheel",
        },
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
        },
      ],
      "yieldApr": 120.32796239576884,
      "yieldPeriodApr": 151.58561272539453,
      "yieldPeriodSources": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 51.14466630369871,
          "balance": 0.057916866556666946,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 0.3631387533103017,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 100.44094642169581,
          "balance": 0.22355910490875885,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 0.7131535446589408,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 40.59840095038963,
          "balance": 39.31395681221993,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 246.49850921261893,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 79.72956144537923,
          "balance": 151.75187329516893,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 484.0884758115889,
        },
      ],
      "yieldValue": 730.5869850242078,
    },
  },
]
`;

exports[`vaults.v2.controller GET /vaults with a specified chain returns the vaults for eth 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 8.26,
    "maxApy": 12.39,
    "minApr": 8.26,
    "minApy": 12.39,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 1116121.18,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 121.30081247605314,
      "harvestPeriodApr": 149.1773902343396,
      "harvestPeriodApy": 149.1773902343396,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 40.57150731349046,
          "balance": 15.224057662985818,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 246.3352209734823,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 80.72930516256265,
          "balance": 145.75136941976888,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 490.1585507433956,
        },
      ],
      "harvestValue": 736.493771716878,
      "nonHarvestApr": 4.813626147728255,
      "nonHarvestApy": 11.851231366577842,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 7.037605218849587,
          "boostable": false,
          "maxApr": 7.037605218849587,
          "minApr": 7.037605218849587,
          "name": "Vault Flywheel",
        },
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
        },
      ],
      "yieldApr": 120.32796239576884,
      "yieldPeriodApr": 151.58561272539453,
      "yieldPeriodSources": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 51.14466630369871,
          "balance": 0.057916866556666946,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 0.3631387533103017,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 100.44094642169581,
          "balance": 0.22355910490875885,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 0.7131535446589408,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 40.59840095038963,
          "balance": 39.31395681221993,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 246.49850921261893,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 79.72956144537923,
          "balance": 151.75187329516893,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 484.0884758115889,
        },
      ],
      "yieldValue": 730.5869850242078,
    },
  },
]
`;

exports[`vaults.v2.controller GET /vaults with an invalid specified chain returns a 400 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v2.controller GET /vaults with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "apr": 8.26,
    "apy": 12.39,
    "asset": "BADGER",
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 8.26,
    "maxApy": 12.39,
    "minApr": 8.26,
    "minApy": 12.39,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 4.13,
        "boostable": false,
        "maxApr": 4.13,
        "minApr": 4.13,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 1116121.18,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 121.30081247605314,
      "harvestPeriodApr": 149.1773902343396,
      "harvestPeriodApy": 149.1773902343396,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 40.57150731349046,
          "balance": 15.224057662985818,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 246.3352209734823,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 80.72930516256265,
          "balance": 145.75136941976888,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 490.1585507433956,
        },
      ],
      "harvestValue": 736.493771716878,
      "nonHarvestApr": 4.813626147728255,
      "nonHarvestApy": 11.851231366577842,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 7.037605218849587,
          "boostable": false,
          "maxApr": 7.037605218849587,
          "minApr": 7.037605218849587,
          "name": "Vault Flywheel",
        },
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
        },
      ],
      "yieldApr": 120.32796239576884,
      "yieldPeriodApr": 151.58561272539453,
      "yieldPeriodSources": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 51.14466630369871,
          "balance": 0.057916866556666946,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 0.3631387533103017,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 100.44094642169581,
          "balance": 0.22355910490875885,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 0.7131535446589408,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 40.59840095038963,
          "balance": 39.31395681221993,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 246.49850921261893,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 79.72956144537923,
          "balance": 151.75187329516893,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 484.0884758115889,
        },
      ],
      "yieldValue": 730.5869850242078,
    },
  },
]
`;

exports[`vaults.v3.controller GET /vaults/harvests error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "Query param address invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/harvests success cases Return extended harvests for chain vault by addr 1`] = `Array []`;

exports[`vaults.v3.controller GET /vaults/list with a specified chain returns the requested vaults 1`] = `
Array [
  Object {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": Object {
      "baseYield": 8.26,
      "grossYield": 8.26,
      "maxGrossYield": 8.26,
      "maxYield": 8.26,
      "minGrossYield": 8.26,
      "minYield": 8.26,
      "sources": Array [
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_flat",
          "name": "Badger Rewards",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "emission",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_curve_lp_fees_flat",
          "name": "Curve LP Fees",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "lp_fee",
        },
      ],
    },
    "apy": Object {
      "baseYield": 12.39,
      "grossYield": 12.39,
      "maxGrossYield": 12.39,
      "maxYield": 12.39,
      "minGrossYield": 12.39,
      "minYield": 12.39,
      "sources": Array [
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
          "name": "Vault Compounding",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "compound",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_flat",
          "name": "Badger Rewards",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "emission",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_curve_lp_fees_flat",
          "name": "Curve LP Fees",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "lp_fee",
        },
      ],
    },
    "asset": "BADGER",
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "state": "open",
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 1116121.18,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 121.30081247605314,
      "harvestPeriodApr": 149.1773902343396,
      "harvestPeriodApy": 149.1773902343396,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 40.57150731349046,
          "balance": 15.224057662985818,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 246.3352209734823,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 80.72930516256265,
          "balance": 145.75136941976888,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 490.1585507433956,
        },
      ],
      "harvestValue": 736.493771716878,
      "nonHarvestApr": 4.813626147728255,
      "nonHarvestApy": 11.851231366577842,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
          "performance": Object {
            "baseYield": 4.813626147728255,
            "grossYield": 4.813626147728255,
            "maxGrossYield": 4.813626147728255,
            "maxYield": 4.813626147728255,
            "minGrossYield": 4.813626147728255,
            "minYield": 4.813626147728255,
          },
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 7.037605218849587,
          "boostable": false,
          "maxApr": 7.037605218849587,
          "minApr": 7.037605218849587,
          "name": "Vault Flywheel",
          "performance": Object {
            "baseYield": 7.037605218849587,
            "grossYield": 7.037605218849587,
            "maxGrossYield": 7.037605218849587,
            "maxYield": 7.037605218849587,
            "minGrossYield": 7.037605218849587,
            "minYield": 7.037605218849587,
          },
        },
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
          "performance": Object {
            "baseYield": 4.813626147728255,
            "grossYield": 4.813626147728255,
            "maxGrossYield": 4.813626147728255,
            "maxYield": 4.813626147728255,
            "minGrossYield": 4.813626147728255,
            "minYield": 4.813626147728255,
          },
        },
      ],
      "yieldApr": 120.32796239576884,
      "yieldPeriodApr": 151.58561272539453,
      "yieldPeriodSources": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 51.14466630369871,
          "balance": 0.057916866556666946,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 0.3631387533103017,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 100.44094642169581,
          "balance": 0.22355910490875885,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 0.7131535446589408,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 40.59840095038963,
          "balance": 39.31395681221993,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 246.49850921261893,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 79.72956144537923,
          "balance": 151.75187329516893,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 484.0884758115889,
        },
      ],
      "yieldValue": 730.5869850242078,
    },
  },
]
`;

exports[`vaults.v3.controller GET /vaults/list with an invalid specified chain returns a 400 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/list with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": Object {
      "baseYield": 8.26,
      "grossYield": 8.26,
      "maxGrossYield": 8.26,
      "maxYield": 8.26,
      "minGrossYield": 8.26,
      "minYield": 8.26,
      "sources": Array [
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_flat",
          "name": "Badger Rewards",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "emission",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_curve_lp_fees_flat",
          "name": "Curve LP Fees",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "lp_fee",
        },
      ],
    },
    "apy": Object {
      "baseYield": 12.39,
      "grossYield": 12.39,
      "maxGrossYield": 12.39,
      "maxYield": 12.39,
      "minGrossYield": 12.39,
      "minYield": 12.39,
      "sources": Array [
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
          "name": "Vault Compounding",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "compound",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_flat",
          "name": "Badger Rewards",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "emission",
        },
        Object {
          "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "boostable": false,
          "chain": "ethereum",
          "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
          "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_curve_lp_fees_flat",
          "name": "Curve LP Fees",
          "performance": Object {
            "baseYield": 4.13,
            "grossYield": 4.13,
            "maxGrossYield": 4.13,
            "maxYield": 4.13,
            "minGrossYield": 4.13,
            "minYield": 4.13,
          },
          "type": "lp_fee",
        },
      ],
    },
    "asset": "BADGER",
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "state": "open",
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "tokens": Array [
      Object {
        "address": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
        "balance": 52,
        "decimals": 18,
        "name": "Badger",
        "symbol": "BADGER",
        "value": 43628,
      },
    ],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 1116121.18,
    "vaultAsset": "bBADGER",
    "vaultToken": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 121.30081247605314,
      "harvestPeriodApr": 149.1773902343396,
      "harvestPeriodApy": 149.1773902343396,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 47.476996208611105,
          "balance": 0.020833363502481106,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 0.3370974621622691,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 101.70039402572849,
          "balance": 0.2147192319881981,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 0.7220959088552831,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x37d9D2C6035b744849C15F1BFEE8F268a20fCBd8",
          "apr": 40.57150731349046,
          "balance": 15.224057662985818,
          "decimals": 18,
          "name": "Badger Sett Aura BAL",
          "symbol": "bauraBAL",
          "value": 246.3352209734823,
        },
        Object {
          "address": "0xBA485b556399123261a5F9c95d413B4f93107407",
          "apr": 80.72930516256265,
          "balance": 145.75136941976888,
          "decimals": 18,
          "name": "Gravitationally Bound AURA",
          "symbol": "graviAURA",
          "value": 490.1585507433956,
        },
      ],
      "harvestValue": 736.493771716878,
      "nonHarvestApr": 4.813626147728255,
      "nonHarvestApy": 11.851231366577842,
      "nonHarvestSources": Array [
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
          "performance": Object {
            "baseYield": 4.813626147728255,
            "grossYield": 4.813626147728255,
            "maxGrossYield": 4.813626147728255,
            "maxYield": 4.813626147728255,
            "minGrossYield": 4.813626147728255,
            "minYield": 4.813626147728255,
          },
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 7.037605218849587,
          "boostable": false,
          "maxApr": 7.037605218849587,
          "minApr": 7.037605218849587,
          "name": "Vault Flywheel",
          "performance": Object {
            "baseYield": 7.037605218849587,
            "grossYield": 7.037605218849587,
            "maxGrossYield": 7.037605218849587,
            "maxYield": 7.037605218849587,
            "minGrossYield": 7.037605218849587,
            "minYield": 7.037605218849587,
          },
        },
        Object {
          "apr": 4.813626147728255,
          "boostable": false,
          "maxApr": 4.813626147728255,
          "minApr": 4.813626147728255,
          "name": "Balancer LP Fees",
          "performance": Object {
            "baseYield": 4.813626147728255,
            "grossYield": 4.813626147728255,
            "maxGrossYield": 4.813626147728255,
            "maxYield": 4.813626147728255,
            "minGrossYield": 4.813626147728255,
            "minYield": 4.813626147728255,
          },
        },
      ],
      "yieldApr": 120.32796239576884,
      "yieldPeriodApr": 151.58561272539453,
      "yieldPeriodSources": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 51.14466630369871,
          "balance": 0.057916866556666946,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 0.3631387533103017,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 100.44094642169581,
          "balance": 0.22355910490875885,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 0.7131535446589408,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0xba100000625a3754423978a60c9317c58a424e3D",
          "apr": 40.59840095038963,
          "balance": 39.31395681221993,
          "decimals": 18,
          "name": "Balancer",
          "symbol": "BAL",
          "value": 246.49850921261893,
        },
        Object {
          "address": "0xC0c293ce456fF0ED870ADd98a0828Dd4d2903DBF",
          "apr": 79.72956144537923,
          "balance": 151.75187329516893,
          "decimals": 18,
          "name": "Aura",
          "symbol": "AURA",
          "value": 484.0884758115889,
        },
      ],
      "yieldValue": 730.5869850242078,
    },
  },
]
`;

exports[`vaults.v3.controller GET /vaults/list/harvests error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/list/harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28": Array [],
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for invalid chain 1`] = `
Object {
  "errors": Array [],
  "message": "invalid is not a supported chain",
  "name": "BAD_REQUEST",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for invalid timestamps 1`] = `
Object {
  "errors": Array [],
  "message": "Query param timestamps invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots error cases returns a 400 for missed vault address param 1`] = `
Object {
  "errors": Array [],
  "message": "Query param vault invalid",
  "name": "Error",
  "status": 400,
}
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 and vaults snapshots for all dates, without duplications 1`] = `
Array [
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.42043576354977,
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "block": 15291696,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 36.42043576354977,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 160819.69130003126,
    "timestamp": 1645103004000,
    "totalSupply": 160912.73437961238,
    "value": 1137078.69,
    "yieldApr": 36.42043576354977,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.058699370488235,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15285176,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 36.058699370488235,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1645015261000,
    "totalSupply": 159193.72047228398,
    "value": 1128118.19,
    "yieldApr": 36.058699370488235,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.18786526089967,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15278533,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 0.006305366586500938,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1644928124000,
    "totalSupply": 159193.72047228398,
    "value": 1097323.6,
    "yieldApr": 0.006305366586500938,
  },
]
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 with 1 relevant vault and 2 old snapshots 1`] = `
Array [
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.42043576354977,
    "available": 93.04307958110472,
    "balance": 160912.73437961238,
    "block": 15291696,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 36.42043576354977,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 160819.69130003126,
    "timestamp": 1645189933000,
    "totalSupply": 160912.73437961238,
    "value": 1137078.69,
    "yieldApr": 36.42043576354977,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.058699370488235,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15285176,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 36.058699370488235,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1634821933000,
    "totalSupply": 159193.72047228398,
    "value": 1128118.19,
    "yieldApr": 36.058699370488235,
  },
  Object {
    "address": "0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "apr": 36.18786526089967,
    "available": 227.79837966012852,
    "balance": 159193.72047228398,
    "block": 15278533,
    "boostWeight": 0,
    "chain": "ethereum",
    "harvestApr": 0.006305366586500938,
    "id": "ethereum-0x937B8E917d0F36eDEBBA8E459C5FB16F3b315551",
    "pricePerFullShare": 1,
    "ratio": 1,
    "strategy": Object {
      "address": "0x98Ca7AFa876f0e15494E76E92C5b3658cdE1Ffe1",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 10,
    },
    "strategyBalance": 158965.92209262386,
    "timestamp": 1634821931000,
    "totalSupply": 159193.72047228398,
    "value": 1097323.6,
    "yieldApr": 0.006305366586500938,
  },
]
`;

exports[`vaults.v3.controller GET /vaults/snapshots success cases return 200 with empty array, got unmatched data 1`] = `Array []`;
